--- a/css/user_listresume.css
+++ b/css/user_listresume.css
@@ -1,16 +1,51 @@
-.pic-company-cc {
-padding: 10px;
-background: #fff;
-height: 352px;
-text-align: center;
+
+
+/* กรอบ */
+.appeal-container {
+    margin-left: 180px;
+    padding-top: 40px;
+    width: 80%;
+    height: auto;
+        
+}
+     
+.appeal-content {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 5px 5px rgba(0.2, 0.2, 0.2, 0.2);
+    display: flex;
+    max-width: 100%;
+    margin: 20px;
+    overflow: hidden;
+    width: 100%;
+}
+         
+.appeal-content-info {
+    padding: 80px;
+    position: relative;
+    width: 100%;
+}
+     
+/* รูปภาพ */
+.profileUser{
+    align-items: center !important;
+    margin-left: 125px;
+}
+     
+.img-profile{
+    height: 150px;
+}
+     
+.upimg{
+    background-color: yellow ;
+    margin: 15px;
+    border: 300px;
+         
+}
+     
+ul li {
+    margin-left: -120px;
+    list-style: none;
+    text-align: center;
 }
 
-.pic-company img {
-    max-width: 100%;
-    height: 150px;
-    width: 150px;
-    object-position: 50% 0;
-    object-fit: cover;
-    border-radius: 50%;
-    background: var(--bg-gray-young);
-    box-shadow: 3px 4px 5px var(--bg-gray);}
