--- a/css/user_Home.css
+++ b/css/user_Home.css
@@ -176,6 +176,14 @@ footer p {
         width: 78% !important;
     }
 
+    .post{
+        margin-bottom: 50px !important;
+    }
+
+    .btn-detail{
+       position:block;
+    }
+
 }
 
 
