--- a/css/ad_admin.css
+++ b/css/ad_admin.css
@@ -1,6 +1,7 @@
 body {
     background-color: #fff9f3 !important;
     font-family: sans-serif;
+    margin-top: 90px !important;
 }
 h1{
     text-align: center;
