--- a/css/user_Home.css
+++ b/css/user_Home.css
@@ -2,6 +2,7 @@ body {
     background-color: #FFF9F3 !important;
     font-family: sans-serif;
     min-width: 370px;
+    margin: 50px;
 }
 
 .header {
@@ -14,6 +15,8 @@ h5 {
     margin-top: -50px;
     color: #97372f;
 }
+
+
 
 
 /* banner */
