--- a/css/ad_Home.css
+++ b/css/ad_Home.css
@@ -12,7 +12,7 @@ body {
 }
 
 .carousel-item img {
-  height: 30rem;
+  height: 32rem;
 }
 
 #carouselExampleIndicators {
@@ -24,11 +24,11 @@ body {
 }
 
 .btn {
-  margin-top: 15px;
+  margin-top: 60px;
   width: 180px;
   height: 50px;
   position: absolute;
-  right: 100px;
+  right: 150px;
 }
 
 .tt {
@@ -38,6 +38,11 @@ body {
 }
 
 /* สร้างประกาศ */
+/* .addjob{
+  margin-top: 30px;
+  margin-left: -30px;
+} */
+
 .modal .modal-dialog .modal-content .modal-heade h4 {
   text-align: center;
 }
