--- a/css/ad_Slidebar.css
+++ b/css/ad_Slidebar.css
@@ -1,17 +1,14 @@
-/* Google Font Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap');
+
+body {
+  font-family: 'Mitr', sans-serif !important;
 }
 
 nav{
   position: fixed;
   top: 0;
   left: 0;
-  height: 70px;
+  height: 50px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -24,7 +21,7 @@ nav{
   position: fixed;
   top: 0;
   height: 100%;
-  width: 100px;
+  width: 85px;
   background: #97372F;
   padding: 6px 14px;
   box-shadow: 0 5 1px rgba(0, 0, 0, 0.1);
