--- a/css/forget.css
+++ b/css/forget.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap');
+
 body {
-    background-color: #fff9f3 !important;
-    font-family: sans-serif;
+  background-color: #fff9f3 !important;
+  font-family: 'Mitr', sans-serif !important;
 
 }
 
