--- a/css/register.css
+++ b/css/register.css
@@ -1,14 +1,15 @@
-body{
-    background: #fff9f3 !important;
-    text-align: center;
-    font-family: sans-serif;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap');
+
+body {
+  background-color: #fff9f3 !important;
+  font-family: 'Mitr', sans-serif !important;
+  text-align: center;
+}
+
   
-  
-  label{
-      margin-left: -80%;
-       
-  }
+label{
+      margin-left: -70%;
+       }
   
   .form-control{
       margin-left: 75px;
@@ -51,8 +52,8 @@ body{
       
       margin-left: 30%;
       margin-top: 15px; 
-      padding: 15px;
-      width: 70%;
+      padding: 35px;
+      width: 50%;
       border-radius: 25px;
     }
     
@@ -64,7 +65,7 @@ body{
       max-width: 80%;
       margin: 20px;
       overflow: hidden;
-      width: 50%;
+      width: 100%;
     }
     
     .appeal-content h5 {
