--- a/css/signin.css
+++ b/css/signin.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap');
 
 body {
-  background: #fff9f3 !important;
-  font-family: sans-serif;
+  background-color: #fff9f3 !important;
+  font-family: 'Mitr', sans-serif !important;
 }
+
 
 .back a i {
 color: darkgrey;
