--- a/css/user_appli_guest.css
+++ b/css/user_appli_guest.css
@@ -1,10 +1,11 @@
-*{
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap');
+
+body {
+  background-color: #fff9f3 !important;
+  font-family: 'Mitr', sans-serif !important;
+  min-width: 370px;
 }
-body{
-    justify-content: center;
-    font-family: sans-serif;
-}
+
 #firstandlast1,#firstandlast2{
     width: 611px;
 }
