--- a/css/user_homelog.css
+++ b/css/user_homelog.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap');
 
 body {
-    background: #fff9f3 !important;
-    margin: 0;
-	font-family: sans-serif;
+  background-color: #fff9f3 !important;
+  font-family: 'Mitr', sans-serif !important;
    
 }
 
