--- a/css/user_listresume.css
+++ b/css/user_listresume.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap');
+
+body {
+  background-color: #fff9f3 !important;
+  font-family: 'Mitr', sans-serif !important;
+}
 /* กรอบ */
 .appeal-container {
     margin-left: 250px;
