--- a/css/user_status.css
+++ b/css/user_status.css
@@ -1,7 +1,9 @@
-body {
-    background-color: #fff9f3 !important;
-    font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap');
 
+body {
+  background-color: #fff9f3 !important;
+  font-family: 'Mitr', sans-serif !important;
+  min-width: 370px;
 }
 
 strong{
