--- a/css/ad_stdInfo.css
+++ b/css/ad_stdInfo.css
@@ -5,11 +5,21 @@ body {
     background-color: #fff9f3 !important;
 }
 
+.btn-upload{
+    margin-top: 200px;
+    margin-right: 220px;
+}
+
 /* รูปภาพ */
+.profileUser {
+    align-items: center !important;
+    margin-left: 85%;
+}
 
 .img-upload {
     position: absolute;
-    top: 70px;
+    /* top: 70px; */
+    margin-top: 200px;
     right: 0;
     text-align: center;
     margin-right: 370px;
@@ -288,55 +298,6 @@ body {
     margin: 30px 0 0 47px;
 }
 
-/* .input-info2 .fact {
-    margin: 10px 0 0 75px;
-}
-
-.input-info2 .fact input{
-    margin: 32px 0 0 5px;
-    border-radius: 5px;
-    border-width: thin;
-    background-color: #f7f7f7;
-    padding: 3px;
-    padding-left: 20px;
-    width: 295px;
-
-}
-
-.input-info2 .depart {
-    margin: -28px 0 0 450px;
-}
-
-.input-info2 .depart input{
-    margin: -28px 0 0 5px;
-    border-radius: 5px;
-    border-width: thin;
-    background-color: #f7f7f7;
-    padding: 3px;
-    padding-left: 20px;
-    width: 295px;
-}
-
-.input-info2 .classyear {
-    position: absolute;
-    margin: -28px 0 0 850px;
-}
-
-.input-info2 .classyear input{
-    position: absolute;
-    margin: -5px 0 0 5px;
-    border-radius: 5px;
-    border-width: thin;
-    background-color: #f7f7f7;
-    padding: 3px;
-    padding-left: 20px;
-    width: 295px;
-}
-
-.input-info2 .edu {
-    margin: 50px 0 0 75px;
-} */
-
 
 /* ปุุ่ม */
 .button{
@@ -348,7 +309,7 @@ body {
 /* กรอบ */
 .appeal-container {
     padding-left: 180px;
-    padding-top: 30px;
+    padding-top: 150px;
     width: 90%;
     height: auto;
     border-radius: 25px;
