--- a/css/apply.css
+++ b/css/apply.css
@@ -46,6 +46,20 @@ body {
   text-decoration: none;
 }
 
+/* .btn-detail:hover{
+   text-decoration: none;
+   color: #fff;
+   background-color: #d0908a;
+} */
+
+.std:hover {
+  text-decoration: none;
+  color: #fff;
+  /* background-color: rgb(249, 125, 125); */
+  opacity: 70%;
+}
+
+
 .general {
   color: #fff;
   background-color: rgb(17, 0, 255);
@@ -57,6 +71,14 @@ body {
   width: 110px;
   padding: 10px;
   text-decoration: none;
+  text-align: center;
+}
+
+.general:hover {
+  text-decoration: none;
+  color: #fff;
+  /* background-color: rgb(71, 71, 255); */
+  opacity: 70%;
 }
 
 /* details */
