--- a/css/forget.css
+++ b/css/forget.css
@@ -5,6 +5,13 @@ body {
   font-family: 'Mitr', sans-serif !important;
 
 }
+.back a i {
+  color: darkgrey;
+  font-size: 50px;
+  margin-top: 30px;
+  margin-left: 30px;
+  }
+  
 
 /* กรอบ */
 
@@ -30,7 +37,7 @@ img{
    
    .appeal-container {
      margin-left: 30%;
-     margin-top: 100px;
+     margin-top: 20px;
      padding: 15px;
      width: 70%;
    
