--- a/css/index.css
+++ b/css/index.css
@@ -135,9 +135,13 @@ h5 {
     border-radius: 5px;
     padding: 10px 15px;
     text-decoration: none;
-    
-
 }
+
+.btn-detail:hover{
+    text-decoration: none;
+    color: #fff;
+    background-color: #d0908a;
+ }
 
 
 
