--- a/css/user_application.css
+++ b/css/user_application.css
@@ -7,112 +7,31 @@ body {
 }
 
 
-/* ----------------------------------------1.ส่วนบน------------------------------------------------------------ */
+/* 1.ส่วนบน */
 #headline{
     text-align: center;
 }
-/* start--progressbar */
-.step-wizard {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 25px;
 
-}
-.step-wizard-list{
-    list-style-type: none;
-    display: flex;
-    position: relative;
-    z-index: 10;
-}
 
-.step-wizard-item{
-    padding: 10px 10px;
-    flex-basis: 0;
-    -webkit-box-flex: 1;
-    -ms-flex-positive:1;
-    flex-grow: 1;
-    max-width: 100%;
+.progress-bar {
     display: flex;
     flex-direction: column;
-    text-align: center;
-    min-width: 300px;
-    position: relative;
-}
-.step-wizard-item + .step-wizard-item:after{
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 19px;
-    background: #022D8C;
-    width: 100%;
-    height: 2px;
-    transform: translateX(-50%);
-    z-index: -10;
-}
-.progress-count{
-    height: 20px;
-    width:20px;
-    display: flex;
-    align-items: center;
     justify-content: center;
-    border-radius: 50%;
-    font-weight: 600;
-    margin: 0 auto;
-    position: relative;
-    z-index:10;
-    color: transparent;
+    overflow: hidden;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    background-color: #fd560d !important;
+    transition: width .6s ease;
 }
-.progress-count:after{
-    content: "";
-    height: 40px;
-    width: 40px;
-    background: #022D8C;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    z-index: -10;
-}
-.progress-count:before{
-    content: "";
-    height: 10px;
-    width: 20px;
-    border-left: 3px solid #fff;
-    border-bottom: 3px solid #fff;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -60%) rotate(-45deg);
-    transform-origin: center center;
-}
-.progress-label{
-    font-size: 14px;
-    margin-top: 10px;
-}
-.current-item .progress-count:before,
-.current-item ~ .step-wizard-item .progress-count:before{
-    display: none;
-}
-
-.current-item .progress-count:after{
-    background: #fff;
-    border: 2px solid #022D8C;
-}
-.current-item .progress-count{
-    color: #022D8C;
-}
-/* end--progressbar */
 
 /* ----------------------------------------2.กล่องฟอร์ม------------------------------------------------------------ */
 
 .applybox {
-    margin:78px 68px 10px 146px ;
+    margin: 78px 68px 10px 100px ;
 }
 .form-outer{
-    padding: 10px 30% !important;
+    padding: 0px 10% !important;
 }
 
 #stepOne input{
@@ -144,25 +63,28 @@ body {
 
 .submitBtn{
     margin-top: 10px !important;
+
 }
 
 #next:hover{
-    background: #FFEA00;
+    background: #ffa200;
     border: none;
 }
 
 #back:hover{
-    background-color: #FFEA00;
+    background-color: #ffa200;
     border: none;
 }
 
 #submit{
-    background-color: #30e8ee;
+    background-color: #022D8C;
     border: none;
+    margin-left: 5px;
+    padding: 0.5rem;
 }
 
 #submit:hover{
-    background-color: #022D8C;
+    background-color: #38a406;
 }
 
 .jobtype{
@@ -170,6 +92,34 @@ body {
     margin-left: 4px;
 }
 
+/* กรอบ */
+.appeal-container {
+margin-left: 25%;
+    padding-top: 30px;
+    width: 45%;
+    height: auto;
+    border-radius: 15px;
+    border: 3px;
+}
+
+.appeal-content {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 10px 10px rgba(0.1, 0.1, 0.1, 0.1);
+    display: flex;
+    max-width: 100%;
+    margin: 20px;
+    overflow: hidden;
+    width: 100%;
+    padding-bottom: 30px;
+}
+
+
+.appeal-content-info {
+    /* padding: 20px; */
+    position: relative;
+    width: 92%;
+}
 
 
 
