--- a/css/ad_stdInfo.css
+++ b/css/ad_stdInfo.css
@@ -153,8 +153,8 @@ body {
 
 .hr2 {
     width: 91%;
-    border-top: 1px solid #000000;
-    margin: 65px 0 0 47px;
+    border-top: 1px solid ;
+    margin: 40px 0 0 47px;
 }
 
 /* ข้อมูลส่วนตัว */
@@ -286,16 +286,18 @@ body {
 }
 
 .hr3 {
-    width: 91%;
-    border-top: 1px solid #000000;
-    margin: 40px 0 0 47px;
+    margin-top: 50px;
+    width: 95%;
+    border-top: 1px solid ;
+    /* margin: 40px 0 0 47px; */
 }
 
 
 
 .info2 {
     color: #97372F;
-    margin: 30px 0 0 47px;
+    margin-top: 30px;
+    /* margin: 30px 0 0 47px; */
 }
 
 
@@ -332,3 +334,18 @@ body {
     position: relative;
     width: 100%;
   }
+
+.file1 a{
+    text-decoration: none !important;
+    color: #fff;
+}
+
+.file1 a:hover{
+    text-decoration: none !important;
+    color: #fff;
+}
+
+.file2 a{
+    text-decoration: none !important;
+    color: #fff;
+}
