--- a/css/user_listresume.css
+++ b/css/user_listresume.css
@@ -69,12 +69,14 @@ ul li {
     position: absolute;
     top: 0;
     left: 0;
-    width: 80%;
-    height: 40%;
+    width: 25%;
+    height: 20%;
     opacity: 0;
     z-index: 10;
     cursor: pointer;
-  }
+    margin-top: 10%;
+    margin-left: 10%;
+}
   
   .file-input > .button {
     display: inline-block;
